Move oldest Klein parseCommandLineArguments out of CoreNLP